fix(dsl,generator): batch-fix 3 generator-module items (REG-146/157/167)
REG-146: fix Workbench applyTo.map key-order nondeterminism (three
Map.copyOf(x) sites -- PlatformStrings.DEFAULTS, SettingsAst.getStrings(),
and a third found while re-verifying, WorkbenchActionApplyToAst.map --
all discarded LinkedHashMap insertion order via JDK's JEP 269 hash-flood
mitigation). Swapped to Collections.unmodifiableMap, preserving order
while staying immutable. check-deterministic-generation.ps1 -SampleId
dsl-conformance-max now passes 3 consecutive runs (was reliably RED).
Filed REG-175 for the ~60 other untriaged Map.copyOf/Set.copyOf sites.

REG-167: FinalAppAssembler.mountWebAssets() now refuses generation when
an author's web/ dir collides with a reserved platform-generated static
path (shell.js, shell.css, info.html, info.json, npdev-business-ui/,
npdev-workbench/), rather than silently mounting a file whose Gradle
resource-merge winner was previously undefined.

REG-157: Ensure-NpdevApiKey (three duplicated call sites) now treats a
pre-existing but empty/malformed secrets/api-key.env the same as an
absent one and regenerates, instead of leaving $env:NPDEV_AUTH_API_KEYS
unset and crashing the caller's header-parsing a few lines later.
Live-reproduced the guard both before and after the fix.

Also files REG-176 (pre-existing, unrelated npdev-pr-gate.yml compile
failure found while verifying PR #91) with a deeper root-cause narrowing.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>